<resources>
    <string name="app_name">Movies App</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_favorite">Favorite</string>
    <string name="logo">logo</string>
    <string name="watch_mtv">Watch MTv</string>
    <string name="title_movie">Title Movie</string>
    <string name="movie_popular">Movie Popular</string>
    <string name="title">Title</string>
    <string name="see_all"><![CDATA[See All >>]]></string>
    <string name="movie_top_rated">Movie Top Rated</string>
    <string name="movie_now_playing">Movie Now Playing</string>
    <string name="movie_upcoming">Movie Upcoming</string>
    <string name="tv_show">TV Show</string>
    <string name="tv_airing_today">TV Airing Today</string>
    <string name="tv_popular">TV Popular</string>
    <string name="tv_top_rated">TV Top Rated</string>
    <string name="action">Action</string>
    <string name="movie_genre">Movie Genre</string>
    <string name="_7_4">7.4</string>
    <string name="action_adventures">Action, Adventures</string>
    <string name="strip">|</string>
    <string name="_2h_46m">2h 46m</string>
    <string name="_2023">2023</string>
    <string name="overview">Overview</string>
    <string name="videos">Video</string>
    <string name="my_list">My List</string>
    <string name="genre">Genre</string>
    <string name="release_date">Release Date</string>
    <string name="_22_10_2022">22-10-2022</string>
    <string name="created_by">Created By</string>
    <string name="craig_mazin">Craig Mazin</string>
    <string name="production">Production</string>
    <string name="not_have_trailer_or_others">Not have video Trailer or Others</string>
    <string name="no_favorites_movies">No Favorites Movies</string>
</resources>