<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical"
    tools:context=".ui.detail.overview.OverviewFragment">

    <TextView
        android:id="@+id/tv_overview"
        style="@style/font_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        tools:text="@string/overview" />

    <TextView
        style="@style/font_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/genre"
        android:textColor="@color/grey_loading" />

    <TextView
        android:id="@+id/tv_genre"
        style="@style/font_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        tools:text="@string/action_adventures" />

    <TextView
        style="@style/font_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/release_date"
        android:textColor="@color/grey_loading" />

    <TextView
        android:id="@+id/tv_release_date"
        style="@style/font_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        tools:text="@string/_22_10_2022" />

    <TextView
        style="@style/font_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/production"
        android:textColor="@color/grey_loading" />

    <TextView
        android:id="@+id/tv_production"
        style="@style/font_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        tools:text="HBO" />

</LinearLayout>