<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="5dp"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/iv_poster"
        android:layout_width="85dp"
        android:layout_height="120dp"
        android:layout_marginHorizontal="5dp"
        android:adjustViewBounds="true"
        android:background="@color/grey_loading"
        android:scaleType="centerCrop"
        android:src="@drawable/poster" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_title"
            style="@style/font_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:paddingBottom="5dp"
            android:text="@string/title"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_overview"
            style="@style/font_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="5dp"
            android:maxLines="2"
            android:text="@string/action_adventures" />

        <TextView
            android:id="@+id/tv_vote"
            style="@style/font_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="5dp"
            android:paddingVertical="5dp"
            android:text="@string/_7_4"
            android:textSize="16sp"
            app:drawableEndCompat="@drawable/ic_star_yellow" />

    </LinearLayout>

</LinearLayout>