<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailMovieActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_detail" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_backdrop"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:alpha="0.5"
                android:adjustViewBounds="true"
                android:background="@color/grey_loading"
                android:scaleType="centerCrop"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/backdrop" />

            <ImageView
                android:id="@+id/iv_poster"
                android:layout_width="100dp"
                android:layout_height="150dp"
                android:adjustViewBounds="true"
                android:background="@color/grey_loading"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="@id/iv_backdrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_backdrop"
                tools:src="@drawable/poster" />

            <ImageButton
                android:id="@+id/btn_favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:background="@drawable/bg_favorite"
                android:padding="10dp"
                android:src="@drawable/ic_unfavorite"
                app:layout_constraintBottom_toBottomOf="@id/iv_backdrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_backdrop" />

            <TextView
                android:id="@+id/tv_title"
                style="@style/font_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:text="@string/title"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@id/iv_poster" />

            <LinearLayout
                android:id="@+id/ll_center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="100dp"
                android:layout_marginVertical="10dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/tv_title">

                <TextView
                    android:id="@+id/tv_runtime"
                    style="@style/font_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    tools:text="@string/_2h_46m" />

                <TextView
                    style="@style/font_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/strip" />

                <TextView
                    android:id="@+id/tv_release_date"
                    style="@style/font_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    tools:text="@string/_2023" />

                <TextView
                    style="@style/font_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/strip" />

                <TextView
                    android:id="@+id/tv_vote"
                    style="@style/font_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    app:drawableRightCompat="@drawable/ic_star_yellow"
                    tools:text="@string/_7_4" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/ll_center">

                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/tab_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/black"
                    app:tabTextColor="@color/white"
                    android:padding="5dp" />

                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/view_pager"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>